<resources>
    <!--App Name-->
    <string name="app_name">ArtMind</string>

    <!--Input Text-->
    <string name="enter_mobile">Enter mobile number:</string>
    <string name="mobile">Mobile number</string>
    <string name="mobile2">Mobile number:</string>
    <string name="mobile_num_ex">+601x-xxxxxxx</string>
    <string name="enter_otp">Enter OTP:</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP in 30s</string>
    <string name="resend_otp2">Resend OTP in </string>
    <string name="enter_username">Enter Username:</string>
    <string name="username">Username</string>
    <string name="username2">Username:</string>
    <string name="user_ex">user</string>
    <string name="minutes">Minutes</string>

    <!--Buttons-->
    <string name="send_otp">Send OTP</string>
    <string name="login_signin">Login/ Sign in</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="resend_otp_click">Resend OTP</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="scan">Scan</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>

    <!--Titles-->
    <string name="timer_title">Focus Timer</string>
    <string name="find_help_title">Find Help</string>
    <string name="scan_title">Scan</string>
    <string name="history_title">History</string>
    <string name="result_title">Result</string>
    <string name="user_title">Profile</string>
    <string name="about_title">About Us</string>
    <string name="setting_title">Setting</string>
    <string name="user_manual_title">Ethical Guidelines</string>

    <!--Guidelines-->
    <string name="guideline1">Important Note</string>
    <string name="guideline2">Privacy Matters</string>
    <string name="guideline3">Data Usage</string>
    <string name="guideline4">Guideline Agreement</string>
    <string name="desc1">ArtMind is meant to be a quick snapshot of your mental health. If your results indicate you may be experiencing symptoms of a mental illness, consider sharing your results with someone (such as a doctor or a therapist).</string>
    <string name="desc2">Respect the privacy of others. Do not take screenshots or share any content without explicit consent. Everyone has the right to control the visibility of their creations and maintain a sense of security within the community.</string>
    <string name="desc3">Your privacy matters to us. Rest assured that the data uploaded will not be utilized for any research purposes. We are committed to maintaining the confidentiality of your information.</string>
    <string name="desc4">Using this app implies your agreement to follow our guidelines, fostering an ethical environment for everyone. Your adherence contributes to the well-being of the entire community.</string>

    <!--Others-->
    <string name="about_content">The goal of ArtMind is to enhance individuals\' self-awareness regarding their mental well-being, fostering a deeper understanding of their emotional states.
        It is not only designed for individuals but also for parents or educators.
        By identifying their mental state through creative expression, individuals can make informed decisions and access support from mental health centre through ArtMind.
    </string>
    <string name="otp_success">OTP sent successfully</string>
    <string name="otp_fail">OTP verification failed</string>
    <string name="prof_pic">Click image to change profile pic</string>
    <string name="find_help_website">click to visit website</string>
    <string name="country_name_null">No help centre(s) found for selected country</string>
    <string name="country_desc_null">Stay tuned for the updates :)</string>
    <string name="username_error">Username should be of length 3 to 10</string>
    <string name="timer_content">Focus on your drawing to ease your mind of anxieties with the help of this timer!</string>
    <string name="timer_complete_msg">Congratulations, you have focused for </string>
    <string name="disclaimer">Remember: \nThis tool is not a substitute for a diagnostic evaluation by mental health professional. Please refer to the Ethical Guidelines.</string>
</resources>