<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:orientation="vertical"
    tools:context=".component.settings.user_account.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_title" />

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/user_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_small"
            android:textStyle="bold"
            android:text="@string/prof_pic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.08"
            android:text="@string/mobile2"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_phone"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:hint="@string/mobile_num_ex" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.08"
            android:text="@string/username2"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_username"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/user_ex"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                style="@style/ButtonDeco"
                android:src="@drawable/button_left" />

            <Button
                android:id="@+id/edit_btn"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:backgroundTint="@color/blue"
                app:backgroundTintMode="multiply" />

            <ImageView
                style="@style/ButtonDeco"
                android:src="@drawable/button_right" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/profile_progress_bar"
            style="@style/ProgressBar" />

    </LinearLayout>

</ScrollView>