<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:orientation="vertical"
    tools:context=".component.focus_timer.TimerCompleteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_title" />

        <ImageView
            android:id="@+id/timer_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/drawing_frog" />

        <TextView
            android:id="@+id/timer_complete_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/timer_complete_msg"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_back"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:backgroundTint="@color/orange"
            app:backgroundTintMode="multiply" />


    </LinearLayout>
</ScrollView>