<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".component.scan.ScanFragment">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_title" />

    <ImageView
        android:id="@+id/scan_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:letterSpacing="0.08"
        android:text="Artwork by:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/author_input"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/ButtonDeco"
            android:src="@drawable/button_left" />

        <Button
            android:id="@+id/scan_btn"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            app:backgroundTint="@color/red"
            app:backgroundTintMode="multiply" />

        <ImageView
            style="@style/ButtonDeco"
            android:src="@drawable/button_right" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_rounded_corner"
        android:backgroundTint="@color/brown"
        android:padding="10dp"
        android:text="@string/disclaimer"
        android:textColor="@color/white" />

</LinearLayout>