<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="multiply">

                <TextView
                    style="@style/BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="multiply">

                <TextView
                    style="@style/BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="2"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/circular_bg"
                android:backgroundTint="@color/pink"
                android:backgroundTintMode="multiply">

                <TextView
                    style="@style/BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="3"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_weight="20"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="5"
            android:letterSpacing="0.08"
            android:text="@string/enter_username"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_username"
                style="@style/InputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="20"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    style="@style/ButtonDeco"
                    android:src="@drawable/button_left" />

                <Button
                    android:id="@+id/login_let_me_in_btn"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_signin"
                    app:backgroundTint="@color/pink"
                    app:backgroundTintMode="multiply" />

                <ImageView
                    style="@style/ButtonDeco"
                    android:src="@drawable/button_right" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="@style/ProgressBar" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
